[metadata]
name = pythonfinder
description = A cross-platform python discovery tool to help locate python on any system.
url = https://github.com/sarugaku/pythonfinder
author = Dan Ryan
author_email = dan@danryan.co
long_description = file: README.rst
license = MIT
license_file = LICENSE.txt
keywords =
    pythonfinder
    path
    finder
    pathfinder
    which
    pep514
    pyenv
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = true
python_requires = >=3.7
setup_requires = setuptools>=41.0
include_package_data = true
package_data =
    LICENSE*
    README*
install_requires =
    cached-property
    packaging>=22.0
    pydantic>=1.10.7

[options.packages.find]
where = src
exclude =
    tests
    docs
    tasks

[options.extras_require]
cli =
    click
tests =
    pytest
    pytest-cov
    pytest-timeout
    coverage<5
dev =
    parver
    wheel>=0.33.4
    invoke
    twine
    lxml
    pre-commit
    towncrier

[options.entry_points]
console_scripts =
    pyfinder = pythonfinder.cli:cli

[tool:pytest]
addopts = -ra --timeout 300 --cov
testpaths = tests/
norecursedirs = .* build dist news tasks docs
markers =
    parse
    skip_nt
    is_python
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 90
select = C,E,F,W,B
ignore =
    # The default ignore list:
    # E121,E123,E126,E226,E24,E704,
    D203,F401,E123,E203,W503,E501,E402,F841,B950,TC,TC1
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    # E231,E402,E501
extend_exclude =
    docs/source/*,
    tests/*,
    setup.py
max-complexity=16

[isort]
atomic = true
not_skip = __init__.py
skip = src/pythonfinder/_vendor
line_length = 90
indent = '    '
multi_line_output = 3
known_third_party = cached_property,click,invoke,packaging,parver,pydantic,pytest,requests,setuptools,six,towncrier
known_first_party = pythonfinder,tests
combine_as_imports=True
include_trailing_comma = True
force_grid_wrap=0

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.7

[pytype]
python_version = 3.7
inputs =
    src/pythonfinder/
exclude =
    **/*_test.py
    **/test_*.py
    **/*_test_*.py
