[metadata]
name = pythonfinder
description = A cross-platform python discovery tool to help locate python on any system.
url = https://github.com/sarugaku/pythonfinder
author = Dan Ryan
author_email = dan@danryan.co
long_description = file: README.rst
license = MIT
license_file = LICENSE.txt
keywords =
    pythonfinder
    path
    finder
    pathfinder
    which
    pep514
    pyenv
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = true
python_requires = >=3.7
setup_requires = setuptools>=41.0
include_package_data = true
package_data =
    LICENSE*
    README*
install_requires =
    cached-property
    packaging>=22.0
    pydantic>=1.10.7,<2

[options.packages.find]
where = src
exclude =
    tests
    docs
    tasks

[options.extras_require]
cli =
    click
tests =
    pytest
    pytest-cov
    pytest-timeout
    coverage<5
dev =
    parver
    wheel>=0.33.4
    invoke
    twine
    lxml
    pre-commit
    towncrier

[options.entry_points]
console_scripts =
    pyfinder = pythonfinder.cli:cli

[tool:pytest]
addopts = -ra --timeout 300 --cov
testpaths = tests/
norecursedirs = .* build dist news tasks docs
markers =
    parse
    skip_nt
    is_python
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[bdist_wheel]
universal = 1

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.7

[pytype]
python_version = 3.7
inputs =
    src/pythonfinder/
exclude =
    **/*_test.py
    **/test_*.py
    **/*_test_*.py
